@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-03T16:18:07Z",
-  "count_outdated" : 99,
-  "uniques_outdated" : 64,
+  "timestamp" : "2022-06-14T01:18:06Z",
+  "count_outdated" : 105,
+  "uniques_outdated" : 69,
   "count" : 106,
   "uniques" : 70,
   "clones" : [
-    {
-      "timestamp": "2022-05-30T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 6, 6 ],
-      "uniques": 5,
-      "uniques_minmax": [ 5, 5 ]
-    },
     {
       "timestamp": "2022-05-31T00:00:00Z",
       "count": 1,
