@@ -1,12 +1,7 @@
 {
-  "count": 7,
-  "uniques": 6,
+  "count": 1,
+  "uniques": 1,
   "clones": [
-    {
-      "timestamp": "2022-05-30T00:00:00Z",
-      "count": 6,
-      "uniques": 5
-    },
     {
       "timestamp": "2022-05-31T00:00:00Z",
       "count": 1,
